<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:checked="true"
            android:id="@+id/rb_home"
            style="@style/table_radiobutton_style"
            android:drawableTop="@drawable/selector_tab_home"
            android:text="@string/tab_rb_home"/>

        <RadioButton
            android:id="@+id/rb_search"
            style="@style/table_radiobutton_style"
            android:drawableTop="@drawable/selector_tab_search"
            android:text="@string/tab_rb_find"
            />

        <RadioButton
            android:id="@+id/rb_love"
            style="@style/table_radiobutton_style"
            android:drawableTop="@drawable/selector_tab_love"
            android:text="@string/tab_rb_circle"
            />

        <RadioButton
            android:id="@+id/rb_person"
            style="@style/table_radiobutton_style"
            android:drawableTop="@drawable/selector_tab_person"
            android:text="@string/tab_rb_me"/>

    </RadioGroup>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/rg_tab"
        android:background="@color/line_color"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rg_tab"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
